--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     -->
         <title>React App</title>
     </head>
-    <body style="background-image: url(Background.png);">
+    <body style="background-image: url(university_background.jpg)">
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
         <!--
