--- a/public/index.html
+++ b/public/index.html
@@ -3,17 +3,16 @@
     <head>
         <meta charset="utf-8" />
         <link
-            href="https://fonts.googleapis.com/css?family=Gugi&display=swap"
+            href="https://fonts.googleapis.com/css?family=Lacquer&display=swap"
             rel="stylesheet"
         />
-        <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+        <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta
             name="description"
             content="Web site created using create-react-app"
         />
-        <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
         <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -28,9 +27,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-        <title>React App</title>
+        <title>Monsters University</title>
     </head>
-    <body style="background-image: url(university_background.jpg)">
+    <body style="background-image: url(Pixar_MU.jpg)">
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
         <!--
