--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
     -->
         <title>Monsters University</title>
     </head>
-    <body style="background-image: url(Pixar_MU.jpg)">
+    <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
         <!--
